--- a/src/components/airports/airports-edit.component.html
+++ b/src/components/airports/airports-edit.component.html
@@ -10,7 +10,7 @@
         <input pInputText id="float-input" type="text" size="30" [(ngModel)]="airport.Name">
 
         <h3>Country (ISO code)</h3>
-        <input pInputText id="float-input" type="text" size="30" [(ngModel)]="airport.Iata">
+        <input pInputText id="float-input" type="text" size="30" [(ngModel)]="airport.Iso">
 
         <h3>Continent</h3>
         <input pInputText id="float-input" type="text" size="30" [(ngModel)]="airport.Continent">
